# archestra

./: EXTERNAL_CONTRIBUTORS.md
.github/workflows/: platform-e2e-tests.yml
archestra-bench/analyzer/: Cargo.toml
archestra-bench/analyzer/src/: analyze.rs  lanes.rs  main.rs  runmeta.rs  trajectory.rs
archestra-bench/runner/src/: client.rs  lib.rs  run.rs
docs/pages/: mcp-authentication.md  platform-agents.md  platform-archestra-mcp-server.md  platform-costs-and-limits.md  platform-deployment.md
migration-kit/: SKILL.md
migration-kit/references/: entity-mapping.md
platform/: .env.example  .npmrc  CHANGELOG.md  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
platform/archestra-rs/sandbox-core/src/: lib.rs  runtime.rs  session.rs  telemetry.rs
platform/backend/src/: config.ts
platform/backend/src/archestra-mcp-server/: run-tool.test.ts  run-tool.ts
platform/backend/src/auth/: better-auth.ts
platform/backend/src/clients/: chat-mcp-client.hooks.test.ts  chat-mcp-client.test.ts  chat-mcp-client.ts  llm-client.ts  mcp-client.test.ts  mcp-client.ts
platform/backend/src/database/: seed.ts
platform/backend/src/hooks/: hook-runner.ts
platform/backend/src/middleware/: audit-decisions.ts
platform/frontend/: package.json
platform/helm/archestra/: values.yaml
platform/helm/dagger-runtime/: values.yaml
platform/shared/: access-control.ts  cascade-scenarios.ts  catalog-shape-fixtures.ts  chat-error.ts  chat.test.ts  chat.ts  index.ts  model-constants.ts  model-resolution.test.ts  model-resolution.ts  oauth.ts  routes.ts
(+104 files in other folders)
